<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">企业标准化</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">加载中...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="str_title_standard_login">企业标准-登陆</string>
    <string name="str_pro_judge">专家评审</string>
    <string name="str_reset_pwd">修改密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_choose_dep">请选择部门</string>
    <string name="str_search_pdfNam">文件名</string>
    <string name="str_search_qwjs">全文检索</string>
    <string name="str_search_docNum">文号</string>
    <string name="str_search_ruleNum">企标号</string>
    <string name="str_previous_page"> 上一页</string>
    <string name="str_next_page">下一页</string>
    <string name="str_file_reading">文件阅读</string>
    <string name="str_index">首页</string>
    <string name="str_personal">我的</string>
    <string name="str_nickName">昵称：</string>
    <string name="str_status">状态：</string>
    <string name="title_activity_download_list">DownloadListActivity</string>
    <string name="title_activity_read_status">ReadStatusActivity</string>

</resources>