<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_bg"
    android:paddingBottom="10dp">
    <RelativeLayout
        android:id="@+id/spinner_dep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_bg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_layout_bg"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/tv_search_dep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/str_choose_dep"
                android:textColor="@color/color_spinner_unselect"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/icon_arr_d" />
        </RelativeLayout>
    </RelativeLayout>


<RelativeLayout
    android:id="@+id/rl_search"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_below="@id/spinner_dep"
    android:visibility="gone"
    >
    <RadioGroup
        android:id="@+id/layout_search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <RadioButton
            android:id="@+id/tv_search_pdfName"
            style="@style/RadioButtonConditionStyle"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/str_search_pdfNam" />


        <RadioButton
            android:id="@+id/tv_search_docNum"
            style="@style/RadioButtonConditionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_search_docNum" />


        <RadioButton
            android:id="@+id/tv_search_ruleNum"
            style="@style/RadioButtonConditionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_search_ruleNum" />

        <!-- <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#868686" /> -->

        <RadioButton
            android:id="@+id/tv_search_qwjs"
            style="@style/RadioButtonConditionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_search_qwjs" />
    </RadioGroup>
</RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/rl_search"
        android:layout_marginTop="10dp" >
        <Button
            android:id="@+id/bt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/title_bg"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:text="文件名"/>
        <ImageView
            android:id="@+id/iv_search_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right_small"
            android:layout_toRightOf="@id/bt_type"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@color/title_bg"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="搜索"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="25dp"
            android:layout_toLeftOf="@id/btn_search"
            android:layout_marginLeft="100dp"
            android:background="@drawable/edittext_bg"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                 />
            <ImageView
                android:id="@+id/iv_searchtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/edit_search_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_searchtype"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/img_search"
                android:background="@null"
                android:textSize="20dp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>